--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A minimal signaling server for WebRTC",
   "main": "server.js",
   "author": "Philipp Hancke",
-  "contributors": ["Tsahi Levent-Levi"],
+  "contributors": [
+    "Tsahi Levent-Levi"
+  ],
   "scripts": {
     "start": "node server.js",
     "test": "eslint *.js static/*.html"
@@ -12,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "uuid": "^3.4.0",
-    "ws": "^7.2.1"
+    "ws": "^7.4.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
